# scheme-lib

./: .gitignore  404.html  LICENSE  Makefile  README.md  dump.pkl  index.html
about/: index.html
agave/: README.md
agave/color/: conversion.sls  rgba.sls
agave/demos/: ca-amoeba.sps  ca-star-wars.sps  cfdg-abbreviations.sls  cfdg-game1-turn6.sps  jitter-bug.sps
agave/glamour/: misc.sls  window.sls
agave/misc/: bytevector-utils.sls  record-utils.sls
agave/processing/: math.sls  shapes-3d.sls  shapes.sls
android/src/: build.sh
android/src/libglut/: Android.mk  glut.h
android/src/libimgui/: Android.mk  imgui_impl_android.cpp  imgui_impl_android.h  keyboard.h  main.cpp
android/src/libscm/: Android.mk  scm.h
apps/: calc.ss  cffi-test.ss  compiler-test.ss  config.xml  dominos.ss  draw-image.ss  draw-point.ss  duck-calc.ss  duck-demo.ss  duck-terminal.ss  duck-test.ss  event-socket-test.ss  event-test.ss  game-plane.ss  gl-demo.ss  glfw-test.ss  glfw-test2.ss  glut-demo.ss  glut-test.ss  gui-test.ss  gui2-test.ss  hello-duck.ss  hello.ss  http-download.ss  http-test.ss  imgui-test.ss  jsontest.ss  load_img.ss  logger-test.ss  mongoc-test.ss  mysql-test.ss  nanovg-test.ss  opengl-load-image.ss  opengl-load-model.ss  regex-test.ss  regex-test2.ss  socket-scheme.ss  sqlite-test.ss  sqliteTest.ss  tensorflow-hello.ss  (+7 more)
apps/game-plane/: game-plane.ss
apps/web/: app.ss  spider.db  spider.ss
apps/web/content/js/: app.js
apps/web/views/: index.html
assets/css/: 0.styles.be889c48.css
assets/js/: 10.9f689f80.js  11.e96ec370.js  12.0c97394b.js  13.c0c38b07.js  14.49061573.js  15.a196a7d1.js  16.d05c1140.js  17.20acbcd8.js  18.225fd011.js  19.7156d96c.js  2.717986cd.js  20.ddb59844.js  21.76b988dc.js  22.b490eaf0.js  23.756a7dd8.js  24.bcac95eb.js  25.2e524cd3.js  26.39967ac9.js  27.f8e4c083.js  28.88482de7.js  29.5fa2fe9a.js  3.3680f9a6.js  30.dd0552c7.js  31.cf140346.js  32.ba3c6be0.js  33.c0ca864c.js  34.306a5faf.js  35.2238a00d.js  36.a8ac7a0b.js  4.a7d87990.js  5.918194ec.js  6.c251f99b.js  7.3d818c5a.js  8.2d51dbde.js  9.c7da5c3d.js  app.7d3796fb.js
box2d-lite/: README.md  arbiter.sls  collide.sls  compute-incident-edge.sls  edge-numbers.sls  vec.sls  world.sls
box2d-lite/demos/: randomized-stacking.sps  simple-pendulum.sps  small-pyramid.sps  varying-friction.sps
box2d-lite/util/: say.sls
dharmalab/indexable-sequence/: indexable-functors.sls
dharmalab/infix/: infix.sls
dharmalab/math/: basic.sls
dharmalab/misc/: curry.sls  equivalence.sls  is-list.sls  limit-call-rate.sls  list-fp.sls  list.sls  queue.sls  random-weighted.sls  symbols.sls
dharmalab/misc/time/: entry.ypsilon.sls
dharmalab/records/: define-import-type-syntax.sls  define-record-type.org  define-record-type.sls
docs/: index.html
docs/第一章 介绍/: 1.0 概述.html  1.0 概述.md  1.1 scheme-lib库.html  1.1 scheme-lib库.md
docs/第七章 宏/: 7.1 什么是宏.html  7.1 什么是宏.md  7.2 宏的使用.html  7.2 宏的使用.md
docs/第三章 输入输出/: 3.1 输入输出.html  3.1 输入输出.md
docs/第二章 入门/: 2.1 scheme-lib安装.html  2.1 scheme-lib安装.md  2.2 win下编译安装.html  2.2 win下编译安装.md
docs/第五章 CFFI库/: 5.1 cffi库使用.md
docs/第五章 FFI库/: 5.0 ffi库的概述.html  5.0 ffi库的概述.md  5.1 cffi库使用.html  5.1 cffi库使用.md
docs/第五章 调试/: 5.1 cffi调试.md
docs/第六章 调试/: 6.1 cffi调试.md  6.1 调试与跟踪.html  6.1 调试与跟踪.md  6.2 scheme调试.html  6.2 scheme调试.md
docs/第四章 GUI库/: 4.2 gui库使用.html  4.2 gui库使用.md
docs/第四章 库使用/: 4.2 gui库使用.md
docs/附录 例子/: 2D物理引擎.html  2D物理引擎.md  GUI图形库.html  GUI图形库.md  Http下载.html  Http下载.md  OpenGL开发.html  OpenGL开发.md  mysql数据库连接例子.html  mysql数据库连接例子.md  web服务器.html  web服务器.md  打飞机游戏.html  打飞机游戏.md  计算器.html  计算器.md  远程解释器.html  远程解释器.md
docs/鸭子实验室/: index.html
gui/: android.ss  dump.pkl  gles1.ss  gles2.ss  glut.ss  gui.ss  imgui.ss
guide/: index.html
lib/: 3rdparty  Android.mk  Application.mk  Makefile  Optimizations.mk  boot  libcffi  libffi  libgl  libglfw  libglut  libscm  libsocket  libsqlite
lib/libalut/: Android.mk  Makefile  al.c  al.h  alut.c  alut.h
lib/libc/: Android.mk  Makefile  c.c  c.h  t.h
lib/libfreetype-gl/: Makefile  opengl.h
lib/libgui/: Android.mk  Makefile  edit.c  edit.h  fontstash.c  fontstash.h  graphic.c  graphic.h  gui.c  gui.h  logger.h  mat4.c  mat4.h  shader.c  shader.h  stb_truetype.h  utf8-utils.c  utf8-utils.h
lib/libimgui/: Android.mk  Makefile  imgui_impl_gl.cpp  imgui_impl_gl.h  imgui_impl_glb.cpp  keyboard.cpp  main.cpp
lib/libimgui/addons/: imgui_user.h
lib/libimgui/cimgui/: cimgui.cpp  cimgui.h
lib/libimgui/imgui/: imgui_draw.cpp
lib/libnanovg/: Android.mk  Makefile  fontstash.h  nanovg.c  nanovg_gl.c  nanovg_gl.h
lib/libsocket/: Android.mk  Makefile  socket.c
lib/libterminal/: Makefile  shl_pty.c  shl_pty.h  terminal.c  terminal.h
lib/libterminal/libtsm/: .gitignore  Makefile.am  NEWS  README  configure.ac
lib/libterminal/libtsm/docs/: libtsm.pc.in  libtsm.sym
lib/libterminal/libtsm/src/: libtsm.h  libtsm_int.h  tsm_render.c  tsm_screen.c  tsm_selection.c  tsm_unicode.c  tsm_vte.c
lib/libterminal/libtsm/test/: test_common.h  test_htable.c  test_symbol.c  test_valgrind.c
lib/libvideo/: #video.c#  Makefile  queue.h  video.c  video.h
lib/scheme/: Android.mk  Makefile  main.c  petite.boot  scheme  scheme.boot
surfage/: LICENSE  README
surfage/private/: include.sls
surfage/private/include/: compat.ypsilon.sls
surfage/s0/: cond-expand.sls
surfage/s19/time/: compat.mzscheme.sls
surfage/s27/: random.ss
surfage/s31/: rec.sls
surfage/s37/: args-fold.sls
surfage/s38/: with-shared-structure.chezscheme.sls  with-shared-structure.ypsilon.sls
surfage/s42/: _eager-comprehensions.sls  design.scm  extension.scm  timing.scm
surfage/s48/: intermediate-format-strings.sls
surfage/s67/: compare.ss
surfage/s78/: check.scm  lightweight-testing.sls
surfage/s98/: os-environment-variables.ikarus.sls  os-environment-variables.larceny.sls  os-environment-variables.mzscheme.sls  os-environment-variables.ypsilon.sls
surfage/tests/: multi-dimensional-arrays--arlib.sps  multi-dimensional-arrays.sps  random-conftest.sps
tools/: gen.py  sync.py
utils/: dump.pkl  libutil.ss
(+39 files in other folders)
